Default files fixed
Default files added to github and to compilation process.

--- a/IO_projekt_asyn/Client-Server NetPBM.csproj
+++ b/IO_projekt_asyn/Client-Server NetPBM.csproj
@@ -50,6 +50,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="files\pliczek.pbm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="files\pliczek2.pgm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="files\pliczek3.ppm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="files\pliczek5.pgm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="files\wyniczek2.pgm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="files\wyniczek3.ppm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
